--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 enUS_ZiraM/rate200/df_audio_features.pkl
+enUS_MarkM/rate200/df_audio_features.pkl
 Original/df_audio_features.pkl
+enUS_MarkM/rate200/*/
+enUS_ZiraM/rate200/*/
